suggest div visibility problem solve

--- a/src/main/resources/META-INF/resources/firstswim/styles/autocomplete.css
+++ b/src/main/resources/META-INF/resources/firstswim/styles/autocomplete.css
@@ -24,6 +24,7 @@
     left: -1px;
     top: 24px;
     word-wrap: break-word;
+    z-index: 9999;
 }
 
 /* One element of suggest list */
